da do dung du lieu vao tung cot