@@ -7,9 +7,11 @@ import com.vaadin.flow.component.ClickEvent;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.checkbox.Checkbox;
 import com.vaadin.flow.component.combobox.ComboBox;
-import com.vaadin.flow.component.html.Div;
+import com.vaadin.flow.component.grid.ItemClickEvent;
+import com.vaadin.flow.component.grid.ItemDoubleClickEvent;
 import com.vaadin.flow.component.html.Span;
 import com.vaadin.flow.component.textfield.TextField;
+import com.vaadin.flow.data.renderer.ComponentRenderer;
 import com.vaadin.flow.router.Route;
 import io.jmix.core.DataManager;
 import io.jmix.core.FileRef;
@@ -17,7 +19,6 @@ import io.jmix.core.FileStorage;
 import io.jmix.core.entity.KeyValueEntity;
 import io.jmix.flowui.Notifications;
 import io.jmix.flowui.component.grid.DataGrid;
-import io.jmix.flowui.component.twincolumn.TwinColumn;
 import io.jmix.flowui.component.upload.FileStorageUploadField;
 import io.jmix.flowui.model.KeyValueCollectionContainer;
 import io.jmix.flowui.view.*;
@@ -31,7 +32,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.sql.*;
+import java.sql.Connection;
+import java.sql.DatabaseMetaData;
+import java.sql.ResultSet;
+import java.sql.SQLException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -40,59 +44,55 @@ import java.util.stream.Collectors;
 @ViewDescriptor(value = "sheeting-view.xml", path = "sheeting-view.xml")
 public class SheetingView extends StandardView {
 
+    /* ===================== Dependencies & Components ===================== */
     @Autowired @Qualifier("dataSource") private DataSource dataSource;
     @Autowired private ObjectMapper objectMapper;
     @Autowired private DataManager dataManager;
     @Autowired private Notifications notifications;
     @Autowired private FileStorage fileStorage;
 
-    @ViewComponent("tablesDc") private KeyValueCollectionContainer tablesDc;
-    @ViewComponent("fieldsDc") private KeyValueCollectionContainer fieldsDc;
+    // Data containers
+    @ViewComponent("tablesDc")   private KeyValueCollectionContainer tablesDc;
+    @ViewComponent("fieldsDc")   private KeyValueCollectionContainer fieldsDc;
     @ViewComponent("selectedDc") private KeyValueCollectionContainer selectedDc;
 
+    // UI components
     @ViewComponent private ComboBox<KeyValueEntity> tablesCb;
-    @ViewComponent private TwinColumn<KeyValueEntity> colsTwin;
+    @ViewComponent private DataGrid<KeyValueEntity> fieldsGrid;
     @ViewComponent private DataGrid<KeyValueEntity> varsGrid;
-
     @ViewComponent private Span tableInfo;
     @ViewComponent private Span jsonPreview;
-
-    // Template + Name Manager
     @ViewComponent private FileStorageUploadField templateUpload;
-    @ViewComponent private TextField headerAnchorField;
-    @ViewComponent private TextField dataAnchorField;
     @ViewComponent private Checkbox templateHasHeaderCb;
     @ViewComponent private TextField sheetNameField;
 
+    /* ===================== State ===================== */
     private String currentTableFqn;
-    private String templateUploadedName;  // ./app-templates/<name>
-    private String currentSelectionJson = "";
-
-    // nhớ mapping name -> tplVar (để preserve khi twin thay đổi)
+    private String templateUploadedName;
     private final Map<String, String> nameToVar = new LinkedHashMap<>();
 
+    // NEW: giữ toàn bộ metadata cột gốc của bảng đang chọn
+    private List<KeyValueEntity> allFields = Collections.emptyList();
+
+    /* ===================== Lifecycle ===================== */
     @Subscribe
     public void onInit(InitEvent event) {
         jsonPreview.setVisible(false);
-
-        if (headerAnchorField != null) headerAnchorField.setPlaceholder("HEADER_START");
-        if (dataAnchorField != null)   dataAnchorField.setPlaceholder("DATA_START");
         if (templateHasHeaderCb != null) templateHasHeaderCb.setValue(Boolean.TRUE);
         if (sheetNameField != null) sheetNameField.setValue("Export");
 
-        // Upload template
+        // Upload template -> ./app-templates
         if (templateUpload != null) {
             templateUpload.addFileUploadSucceededListener(e -> {
                 FileRef ref = templateUpload.getValue();
                 if (ref == null) return;
                 if (isBlank(currentTableFqn)) { warn("Chưa chọn bảng"); return; }
                 try (InputStream is = fileStorage.openStream(ref)) {
-                    String fileName = ref.getFileName();
                     Path dir = Paths.get("./app-templates");
                     Files.createDirectories(dir);
-                    Files.copy(is, dir.resolve(fileName), StandardCopyOption.REPLACE_EXISTING);
-                    templateUploadedName = fileName;
-                    info("Đã lưu template vào app-templates: " + fileName);
+                    Files.copy(is, dir.resolve(ref.getFileName()), StandardCopyOption.REPLACE_EXISTING);
+                    templateUploadedName = ref.getFileName();
+                    info("Đã lưu template: " + templateUploadedName);
                     updateJsonState();
                 } catch (Exception ex) {
                     error("Lưu template thất bại: " + ex.getMessage());
@@ -104,136 +104,161 @@ public class SheetingView extends StandardView {
             });
         }
 
+        // Chọn bảng
         tablesCb.setItemLabelGenerator(this::fqn);
-        colsTwin.setItemLabelGenerator(kv -> Objects.toString(kv.getValue("name"), ""));
         tablesCb.addValueChangeListener(e -> onTableSelected(e.getValue()));
 
-        // Chỉ nghe valueChange chuẩn của TwinColumn để đồng bộ panel phải
-        colsTwin.addValueChangeListener(e -> {
-            syncVarsFromTwin();
-            selectFirstRowIfAny();
-            updateJsonState();
-        });
-
-        // Khi sửa trong grid/form
-        selectedDc.addItemPropertyChangeListener(e -> updateJsonState());
-        selectedDc.addCollectionChangeListener(e -> updateJsonState());
-
-        if (headerAnchorField != null) headerAnchorField.addValueChangeListener(e -> updateJsonState());
-        if (dataAnchorField != null)   dataAnchorField.addValueChangeListener(e -> updateJsonState());
-        if (templateHasHeaderCb != null) templateHasHeaderCb.addValueChangeListener(e -> updateJsonState());
+        // Cập nhật JSON + refresh lưới trái khi dữ liệu thay đổi
+        selectedDc.addItemPropertyChangeListener(e -> { refreshLeftGrid(); updateJsonState(); });
+        selectedDc.addCollectionChangeListener(e -> { refreshLeftGrid(); updateJsonState(); });
         if (sheetNameField != null) sheetNameField.addValueChangeListener(e -> updateJsonState());
+        if (templateHasHeaderCb != null) templateHasHeaderCb.addValueChangeListener(e -> updateJsonState());
+
+        // Biến cột tplVar thành ô nhập trực tiếp
+        setupTplVarInlineEditor();
 
         reloadTables();
     }
 
-    /* ===================== Actions ===================== */
+    private void setupTplVarInlineEditor() {
+        DataGrid.Column<KeyValueEntity> tplCol = varsGrid.getColumnByKey("tplVar");
+        if (tplCol == null) return;
 
+        tplCol.setRenderer(new ComponentRenderer<>(item -> {
+            TextField tf = new TextField();
+            tf.setWidthFull();
+            tf.setPlaceholder("Nhập tên biến…");
+            tf.setValue(Optional.ofNullable((String) item.getValue("tplVar")).orElse(""));
+            tf.addValueChangeListener(ev -> {
+                String newVal = trimOrNull(ev.getValue());
+                item.setValue("tplVar", newVal == null ? "" : newVal);
+                String colName = nvl(item.getValue("name"));
+                if (newVal == null) nameToVar.remove(colName); else nameToVar.put(colName, newVal);
+                selectedDc.replaceItem(item); // refresh container
+                updateJsonState();
+            });
+            return tf;
+        }));
+    }
+
+    /* ===================== Buttons ===================== */
     @Subscribe("saveBtn")
-    public void onSaveBtnClick(ClickEvent<Button> event) {
+    public void onSave(ClickEvent<Button> event) {
         if (isBlank(currentTableFqn)) { warn("Chưa chọn bảng"); return; }
-        if (selectedDc.getItems() == null || selectedDc.getItems().isEmpty()) {
-            warn("Chưa chọn cột để lưu cấu hình"); return;
-        }
-
-        Map<String, Object> payload = buildPayload();
-        String json;
+        if (selectedDc.getItems() == null || selectedDc.getItems().isEmpty()) { warn("Chưa chọn cột"); return; }
         try {
-            json = objectMapper.writeValueAsString(payload);
+            String json = objectMapper.writeValueAsString(buildPayload());
+            SheetingConfig cfg = dataManager.load(SheetingConfig.class)
+                    .query("select e from SheetingConfig e where e.tableName = :t")
+                    .parameter("t", currentTableFqn)
+                    .optional()
+                    .orElseGet(() -> {
+                        SheetingConfig n = dataManager.create(SheetingConfig.class);
+                        n.setTableName(currentTableFqn);
+                        return n;
+                    });
+            cfg.setColumnsJson(json);
+            dataManager.save(cfg);
+            jsonPreview.setText(json);
+            info("Đã lưu cấu hình cho " + currentTableFqn);
         } catch (Exception ex) {
             error("Lỗi tạo JSON cấu hình: " + ex.getMessage());
-            return;
         }
-
-        SheetingConfig cfg = dataManager.load(SheetingConfig.class)
-                .query("select e from SheetingConfig e where e.tableName = :t")
-                .parameter("t", currentTableFqn)
-                .optional()
-                .orElseGet(() -> {
-                    SheetingConfig n = dataManager.create(SheetingConfig.class);
-                    n.setTableName(currentTableFqn);
-                    return n;
-                });
-
-        cfg.setColumnsJson(json);
-        dataManager.save(cfg);
-        info("Đã lưu cấu hình cho " + currentTableFqn);
-        currentSelectionJson = json;
-        jsonPreview.setText(json);
     }
 
     @Subscribe("cancelBtn")
-    public void onCancelBtnClick(ClickEvent<Button> event) {
-        colsTwin.clear();
-        selectedDc.setItems(Collections.emptyList());
-        nameToVar.clear();
-
-        if (templateUpload != null) templateUpload.clear();
-        templateUploadedName = null;
-        if (headerAnchorField != null) headerAnchorField.clear();
-        if (dataAnchorField != null) dataAnchorField.clear();
-        if (templateHasHeaderCb != null) templateHasHeaderCb.setValue(Boolean.TRUE);
-        if (sheetNameField != null) sheetNameField.setValue("Export");
-
-        updateJsonState();
-        notifications.create("Đã hủy thay đổi (chưa lưu vào DB)")
-                .withType(Notifications.Type.DEFAULT).show();
+    public void onCancel(ClickEvent<Button> event) {
+        resetState();
+        info("Đã hủy thay đổi (chưa lưu DB)");
     }
 
-    /* ===================== Loaders ===================== */
+    @Subscribe("addBtn")
+    public void onAdd(ClickEvent<Button> e) {
+        addByNames(fieldsGrid.getSelectedItems().stream()
+                .map(kv -> nvl(kv.getValue("name")))
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toCollection(LinkedHashSet::new)));
+    }
 
-    private void reloadTables() {
-        List<KeyValueEntity> allTables = loadTablesFromDB();
-        tablesDc.setItems(allTables);
-        tablesCb.setItems(allTables);
-        tablesCb.clear();
+    @Subscribe("addAllBtn")
+    public void onAddAll(ClickEvent<Button> e) {
+        addByNames(Optional.ofNullable(fieldsDc.getItems()).orElse(List.of()).stream()
+                .map(kv -> nvl(kv.getValue("name")))
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toCollection(LinkedHashSet::new)));
+    }
 
-        currentTableFqn = null;
-        tableInfo.setText("");
-        fieldsDc.setItems(Collections.emptyList());
-        colsTwin.clear();
+    @Subscribe("removeBtn")
+    public void onRemove(ClickEvent<Button> e) {
+        removeByNames(varsGrid.getSelectedItems().stream()
+                .map(kv -> nvl(kv.getValue("name")))
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toCollection(LinkedHashSet::new)));
+    }
+
+    @Subscribe("removeAllBtn")
+    public void onRemoveAll(ClickEvent<Button> e) {
+        for (KeyValueEntity kv : Optional.ofNullable(selectedDc.getItems()).orElse(List.of())) {
+            String n = nvl(kv.getValue("name"));
+            String v = trimOrNull(nvl(kv.getValue("tplVar"), null));
+            if (!n.isEmpty() && v != null) nameToVar.put(n, v);
+        }
         selectedDc.setItems(Collections.emptyList());
-        nameToVar.clear();
-        templateUploadedName = null;
+        refreshLeftGrid();
         updateJsonState();
+    }
+
+    /* ===================== Grid Events ===================== */
+    // Double click bên trái -> Thêm cột
+    @Subscribe("fieldsGrid")
+    public void onFieldsGridItemDoubleClick(ItemDoubleClickEvent<KeyValueEntity> event) {
+        String name = nvl(event.getItem().getValue("name"));
+        if (!name.isEmpty()) addByNames(Set.of(name));
+    }
+
+    // Double click bên phải -> Gỡ cột
+    @Subscribe("varsGrid")
+    public void onVarsGridItemDoubleClick(ItemDoubleClickEvent<KeyValueEntity> event) {
+        String name = nvl(event.getItem().getValue("name"));
+        if (!name.isEmpty()) removeByNames(Set.of(name));
+    }
+
+    /* ===================== Data Loading ===================== */
+    private void reloadTables() {
+        List<KeyValueEntity> all = loadTablesFromDB();
+        tablesDc.setItems(all);
+        tablesCb.setItems(all);
+        tablesCb.clear();
+        resetState();
     }
 
     private void onTableSelected(KeyValueEntity sel) {
-        if (sel == null) {
-            currentTableFqn = null;
-            tableInfo.setText("");
-            fieldsDc.setItems(Collections.emptyList());
-            colsTwin.clear();
-            selectedDc.setItems(Collections.emptyList());
-            nameToVar.clear();
-            templateUploadedName = null;
-            updateJsonState();
-            return;
-        }
+        if (sel == null) { resetState(); return; }
         currentTableFqn = fqn(sel);
         tableInfo.setText(quickInfo(sel));
         loadColumnsForTable(sel);
         restoreSavedConfigOrReset();
-        syncVarsFromTwin();
-        selectFirstRowIfAny();
         updateJsonState();
     }
 
-    private void selectFirstRowIfAny() {
-        Collection<KeyValueEntity> items = selectedDc.getItems();
-        if (items != null && !items.isEmpty()) {
-            varsGrid.select(items.iterator().next());
-        } else {
-            varsGrid.deselectAll();
-        }
+    private void resetState() {
+        currentTableFqn = null;
+        tableInfo.setText("");
+        fieldsDc.setItems(Collections.emptyList());
+        selectedDc.setItems(Collections.emptyList());
+        nameToVar.clear();
+        templateUploadedName = null;
+        allFields = Collections.emptyList();
+        if (templateUpload != null) templateUpload.clear();
+        refreshLeftGrid(); // safe, sẽ là empty
+        updateJsonState();
     }
 
     private List<KeyValueEntity> loadTablesFromDB() {
         List<KeyValueEntity> list = new ArrayList<>();
         try (Connection conn = dataSource.getConnection()) {
             DatabaseMetaData md = conn.getMetaData();
-            String catalog = conn.getCatalog();
-            try (ResultSet rs = md.getTables(catalog, null, "%", new String[]{"TABLE"})) {
+            try (ResultSet rs = md.getTables(conn.getCatalog(), null, "%", new String[]{"TABLE"})) {
                 while (rs.next()) {
                     String schema  = rs.getString("TABLE_SCHEM");
                     String name    = rs.getString("TABLE_NAME");
@@ -250,7 +275,7 @@ public class SheetingView extends StandardView {
                 }
             }
         } catch (SQLException ex) {
-            throw new RuntimeException("Failed to load tables from database", ex);
+            throw new RuntimeException("Failed to load tables", ex);
         }
         list.sort(Comparator
                 .comparing((KeyValueEntity e) -> nvl(e.getValue("schema")), String.CASE_INSENSITIVE_ORDER)
@@ -259,40 +284,49 @@ public class SheetingView extends StandardView {
     }
 
     private void loadColumnsForTable(KeyValueEntity table) {
-        String schema = nvl(table.getValue("schema"), null);
-        String name   = nvl(table.getValue("name"), null);
-        fieldsDc.setItems(fetchColumns(schema, name));
+        this.allFields = fetchColumns(nvl(table.getValue("schema"), null),
+                nvl(table.getValue("name"), null));
+        refreshLeftGrid(); // chỉ hiển thị cột chưa được chọn
     }
 
-    private List<KeyValueEntity> fetchColumns(String schema, String tableName) {
+    private List<KeyValueEntity> fetchColumns(String schema, String table) {
         List<KeyValueEntity> cols = new ArrayList<>();
         try (Connection conn = dataSource.getConnection()) {
             DatabaseMetaData md = conn.getMetaData();
-            try (ResultSet rs = md.getColumns(conn.getCatalog(), schema, tableName, "%")) {
+            try (ResultSet rs = md.getColumns(conn.getCatalog(), schema, table, "%")) {
                 while (rs.next()) {
                     KeyValueEntity c = new KeyValueEntity();
-                    c.setValue("name", rs.getString("COLUMN_NAME"));
+                    c.setValue("name",     rs.getString("COLUMN_NAME"));
                     c.setValue("dataType", rs.getString("TYPE_NAME"));
-                    c.setValue("size", safeInt(rs, "COLUMN_SIZE"));
+                    c.setValue("size",     safeInt(rs, "COLUMN_SIZE"));
                     c.setValue("nullable", isNullable(rs));
-                    c.setValue("default", rs.getString("COLUMN_DEF"));
-                    c.setValue("remarks", rs.getString("REMARKS"));
+                    c.setValue("default",  rs.getString("COLUMN_DEF"));
+                    c.setValue("remarks",  rs.getString("REMARKS"));
                     cols.add(c);
                 }
             }
         } catch (SQLException ex) {
-            throw new RuntimeException("Failed to load columns for " + schema + "." + tableName, ex);
+            throw new RuntimeException("Failed to load columns for " + schema + "." + table, ex);
         }
         return cols;
     }
 
-    /* ===================== Restore & State ===================== */
+    /* ===================== Filtering (ẩn cột đã chọn ở lưới trái) ===================== */
+    private void refreshLeftGrid() {
+        Set<String> selectedNames = currentSelectedNames();
+        List<KeyValueEntity> visible = Optional.ofNullable(allFields).orElse(List.of())
+                .stream()
+                .filter(kv -> !selectedNames.contains(nvl(kv.getValue("name"))))
+                .collect(Collectors.toList());
+        fieldsDc.setItems(visible);
+    }
 
+    /* ===================== Restore & In-Memory State ===================== */
     private void restoreSavedConfigOrReset() {
         if (isBlank(currentTableFqn)) {
-            colsTwin.clear();
             selectedDc.setItems(Collections.emptyList());
             nameToVar.clear();
+            refreshLeftGrid();
             return;
         }
 
@@ -305,22 +339,12 @@ public class SheetingView extends StandardView {
                         @SuppressWarnings("unchecked")
                         Map<String, Object> json = objectMapper.readValue(cfg.getColumnsJson(), Map.class);
 
-                        Set<String> names = new LinkedHashSet<>();
+                        LinkedHashSet<String> names = new LinkedHashSet<>();
                         nameToVar.clear();
 
                         Object cols = json.get("columns");
-                        Object legacyVars = json.get("templateVars");
-                        Map<String, String> legacyVarMap = null;
-                        if (legacyVars instanceof Map<?, ?> m) {
-                            legacyVarMap = new HashMap<>();
-                            for (Map.Entry<?, ?> en : m.entrySet()) {
-                                legacyVarMap.put(String.valueOf(en.getKey()), String.valueOf(en.getValue()));
-                            }
-                        }
-
                         if (cols instanceof Collection<?> list) {
                             for (Object it : list) {
-                                if (it == null) continue;
                                 if (it instanceof Map<?, ?> m) {
                                     String name = nvl(m.get("name"));
                                     if (!name.isBlank()) {
@@ -328,126 +352,135 @@ public class SheetingView extends StandardView {
                                         String var = trimOrNull(nvl(m.get("tplVar"), null));
                                         if (var != null) nameToVar.put(name, var);
                                     }
-                                } else {
-                                    String name = it.toString();
-                                    if (!name.isBlank()) {
-                                        names.add(name);
-                                        if (legacyVarMap != null && legacyVarMap.containsKey(name)) {
-                                            nameToVar.put(name, legacyVarMap.get(name));
-                                        }
-                                    }
+                                } else if (it != null) {
+                                    names.add(it.toString());
                                 }
                             }
                         }
-
-                        Collection<KeyValueEntity> all = fieldsDc.getItems();
-                        if (all != null && !all.isEmpty()) {
-                            LinkedHashSet<KeyValueEntity> selected = all.stream()
-                                    .filter(kv -> names.contains(nvl(kv.getValue("name"))))
-                                    .collect(Collectors.toCollection(LinkedHashSet::new));
-                            colsTwin.setValue(selected);
+                        // legacy templateVars
+                        Object legacyVars = json.get("templateVars");
+                        if (legacyVars instanceof Map<?, ?> m) {
+                            m.forEach((k, v) -> nameToVar.put(String.valueOf(k), String.valueOf(v)));
                         }
 
-                        if (sheetNameField != null) {
-                            String sheet = Objects.toString(json.getOrDefault("sheetName", "Export"), "Export");
-                            sheetNameField.setValue(sheet);
-                        }
-                        if (headerAnchorField != null) headerAnchorField.setValue(nvl(json.get("headerAnchor")));
-                        if (dataAnchorField != null)   dataAnchorField.setValue(nvl(json.get("dataAnchor")));
-                        if (templateHasHeaderCb != null && json.containsKey("templateHasHeader")) {
+                        selectedDc.setItems(buildRowsFromNames(names));
+
+                        if (sheetNameField != null)
+                            sheetNameField.setValue(Objects.toString(json.getOrDefault("sheetName", "Export"), "Export"));
+                        if (templateHasHeaderCb != null && json.containsKey("templateHasHeader"))
                             templateHasHeaderCb.setValue(Boolean.parseBoolean(nvl(json.get("templateHasHeader"), "true")));
-                        }
                         templateUploadedName = trimOrNull(objToStr(json.get("templateUploaded")));
-
-                        currentSelectionJson = cfg.getColumnsJson();
-                        jsonPreview.setText(currentSelectionJson);
+                        jsonPreview.setText(cfg.getColumnsJson());
                     } catch (Exception ignore) {
-                        colsTwin.clear();
                         selectedDc.setItems(Collections.emptyList());
                         nameToVar.clear();
                         templateUploadedName = null;
                         if (templateUpload != null) templateUpload.clear();
                     }
+                    refreshLeftGrid();
                 }, () -> {
-                    colsTwin.clear();
                     selectedDc.setItems(Collections.emptyList());
                     nameToVar.clear();
                     templateUploadedName = null;
                     if (templateUpload != null) templateUpload.clear();
+                    refreshLeftGrid();
                 });
     }
 
-    /** TwinColumn -> selectedDc, copy metadata và giữ tplVar đã nhập. */
-    private void syncVarsFromTwin() {
-        // preserve tplVar hiện có trước khi rebuild
-        Map<String, String> existingTplVars = new HashMap<>();
-        Collection<KeyValueEntity> oldItems = selectedDc.getItems();
-        if (oldItems != null) {
-            for (KeyValueEntity kv : oldItems) {
-                String name = nvl(kv.getValue("name"));
-                String var  = trimOrNull(nvl(kv.getValue("tplVar"), null));
-                if (!name.isEmpty() && var != null) existingTplVars.put(name, var);
-            }
-        }
+    /** Thêm cột vào selectedDc, tránh trùng, copy metadata từ allFields và giữ tplVar. */
+    private void addByNames(Collection<String> names) {
+        if (names == null || names.isEmpty()) return;
+        Set<String> already = currentSelectedNames();
 
-        Collection<KeyValueEntity> sel = colsTwin.getValue();
         Map<String, KeyValueEntity> metaByName = new HashMap<>();
-        if (fieldsDc.getItems() != null) {
-            for (KeyValueEntity kv : fieldsDc.getItems()) {
+        if (allFields != null) {
+            for (KeyValueEntity kv : allFields) {
                 metaByName.put(nvl(kv.getValue("name")), kv);
             }
         }
+
+        List<KeyValueEntity> rows = new ArrayList<>(Optional.ofNullable(selectedDc.getItems()).orElse(List.of()));
+        for (String raw : names) {
+            String n = nvl(raw);
+            if (n.isEmpty() || already.contains(n)) continue;
+            KeyValueEntity src = metaByName.get(n);
+            if (src == null) continue;
+
+            KeyValueEntity row = new KeyValueEntity();
+            row.setValue("name", n);
+            row.setValue("dataType", src.getValue("dataType"));
+            row.setValue("size", src.getValue("size"));
+            row.setValue("nullable", src.getValue("nullable"));
+            row.setValue("default", src.getValue("default"));
+            row.setValue("remarks", src.getValue("remarks"));
+            row.setValue("tplVar", nameToVar.getOrDefault(n, ""));
+            rows.add(row);
+            already.add(n);
+        }
+        selectedDc.setItems(rows);
+        refreshLeftGrid();
+        updateJsonState();
+    }
+
+    /** Gỡ cột khỏi selectedDc nhưng vẫn nhớ tplVar đã gõ. */
+    private void removeByNames(Collection<String> names) {
+        if (names == null || names.isEmpty()) return;
+        Set<String> toRemove = names.stream().filter(s -> !isBlank(s)).collect(Collectors.toSet());
         List<KeyValueEntity> rows = new ArrayList<>();
-        if (sel != null) {
-            for (KeyValueEntity kv : sel) {
-                String name = nvl(kv.getValue("name"));
-                if (name.isBlank()) continue;
-                KeyValueEntity src = metaByName.get(name);
-                KeyValueEntity row = new KeyValueEntity();
-                row.setValue("name", name);
-                row.setValue("dataType", src != null ? src.getValue("dataType") : null);
-                row.setValue("size", src != null ? src.getValue("size") : null);
-                row.setValue("nullable", src != null ? src.getValue("nullable") : null);
-                row.setValue("default", src != null ? src.getValue("default") : null);
-                row.setValue("remarks", src != null ? src.getValue("remarks") : null);
-                row.setValue("tplVar", existingTplVars.getOrDefault(name, ""));
-                rows.add(row);
+        for (KeyValueEntity kv : Optional.ofNullable(selectedDc.getItems()).orElse(List.of())) {
+            String n = nvl(kv.getValue("name"));
+            if (!toRemove.contains(n)) {
+                rows.add(kv);
+            } else {
+                String var = trimOrNull(nvl(kv.getValue("tplVar"), null));
+                if (var != null) nameToVar.put(n, var);
             }
         }
         selectedDc.setItems(rows);
+        refreshLeftGrid();
+        updateJsonState();
     }
 
-    private void addToSelectedByName(String name) {
-        if (fieldsDc.getItems() == null) return;
-        KeyValueEntity found = fieldsDc.getItems().stream()
-                .filter(kv -> name.equals(Objects.toString(kv.getValue("name"), "")))
-                .findFirst().orElse(null);
-        if (found == null) return;
-        LinkedHashSet<KeyValueEntity> cur = new LinkedHashSet<>();
-        if (colsTwin.getValue() != null) cur.addAll(colsTwin.getValue());
-        if (!cur.contains(found)) cur.add(found);
-        colsTwin.setValue(cur);
+    private Set<String> currentSelectedNames() {
+        return Optional.ofNullable(selectedDc.getItems()).orElse(List.of()).stream()
+                .map(kv -> nvl(kv.getValue("name")))
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
-    private void selectInRightPaneByName(String name) {
-        Collection<KeyValueEntity> items = selectedDc.getItems();
-        if (items == null) return;
-        for (KeyValueEntity row : items) {
-            if (name.equals(Objects.toString(row.getValue("name"), ""))) {
-                varsGrid.select(row);
-                return;
+    private List<KeyValueEntity> buildRowsFromNames(Collection<String> names) {
+        Map<String, KeyValueEntity> metaByName = new HashMap<>();
+        if (allFields != null) {
+            for (KeyValueEntity kv : allFields) {
+                metaByName.put(nvl(kv.getValue("name")), kv);
             }
         }
+
+        List<KeyValueEntity> rows = new ArrayList<>();
+        for (String raw : names) {
+            String n = nvl(raw);
+            if (n.isEmpty()) continue;
+            KeyValueEntity src = metaByName.get(n);
+            if (src == null) continue;
+
+            KeyValueEntity row = new KeyValueEntity();
+            row.setValue("name", n);
+            row.setValue("dataType", src.getValue("dataType"));
+            row.setValue("size", src.getValue("size"));
+            row.setValue("nullable", src.getValue("nullable"));
+            row.setValue("default", src.getValue("default"));
+            row.setValue("remarks", src.getValue("remarks"));
+            row.setValue("tplVar", nameToVar.getOrDefault(n, ""));
+            rows.add(row);
+        }
+        return rows;
     }
 
+    /* ===================== JSON payload ===================== */
     private void updateJsonState() {
         try {
-            Map<String, Object> payload = buildPayload();
-            String json = objectMapper.writeValueAsString(payload);
-            this.currentSelectionJson = json;
-            jsonPreview.setText(json);
+            jsonPreview.setText(objectMapper.writeValueAsString(buildPayload()));
         } catch (Exception ex) {
-            this.currentSelectionJson = "{}";
             jsonPreview.setText("{}");
         }
     }
@@ -455,14 +488,12 @@ public class SheetingView extends StandardView {
     private Map<String, Object> buildPayload() {
         Map<String, Object> payload = new LinkedHashMap<>();
         payload.put("table", currentTableFqn);
-        payload.put("columns", selectedColumnsStructured());
-        payload.put("columnsFlat", selectedColumnNames()); // compat cũ
-        payload.put("templateVars", selectedVarMap());     // compat cũ
-        payload.put("sheetName",  sheetNameField != null ? nvl(sheetNameField.getValue(), "Export") : "Export");
-        payload.put("headerAnchor", headerAnchorField != null ? trimOrNull(headerAnchorField.getValue()) : null);
-        payload.put("dataAnchor",   dataAnchorField != null ? trimOrNull(dataAnchorField.getValue())   : null);
+        payload.put("columns",       selectedColumnsStructured());
+        payload.put("columnsFlat",   selectedColumnNames()); // compat cũ
+        payload.put("templateVars",  selectedVarMap());      // compat cũ
+        payload.put("sheetName",     sheetNameField != null ? nvl(sheetNameField.getValue(), "Export") : "Export");
         payload.put("templateHasHeader", templateHasHeaderCb != null && Boolean.TRUE.equals(templateHasHeaderCb.getValue()));
-        payload.put("templateUploaded", templateUploadedName);
+        payload.put("templateUploaded",  templateUploadedName);
         return payload;
     }
 
@@ -486,8 +517,7 @@ public class SheetingView extends StandardView {
     }
 
     private List<String> selectedColumnNames() {
-        return colsTwin.getValue() == null ? Collections.emptyList()
-                : colsTwin.getValue().stream()
+        return Optional.ofNullable(selectedDc.getItems()).orElse(List.of()).stream()
                 .map(kv -> nvl(kv.getValue("name")))
                 .filter(s -> !s.isEmpty())
                 .collect(Collectors.toList());
@@ -507,15 +537,20 @@ public class SheetingView extends StandardView {
     }
 
     /* ===================== Utils ===================== */
-
     private static boolean isBlank(String s) { return s == null || s.isBlank(); }
-    private static int safeInt(ResultSet rs, String col) throws SQLException { int v = rs.getInt(col); return rs.wasNull() ? 0 : v; }
+
+    private static int safeInt(ResultSet rs, String col) throws SQLException {
+        int v = rs.getInt(col);
+        return rs.wasNull() ? 0 : v;
+    }
+
     private static boolean isNullable(ResultSet rs) throws SQLException {
         String s = rs.getString("IS_NULLABLE");
         if (s != null) return "YES".equalsIgnoreCase(s);
         int flag = rs.getInt("NULLABLE");
         return flag != DatabaseMetaData.columnNoNulls;
     }
+
     private static boolean isSystemSchema(String schema) {
         if (schema == null) return false;
         String s = schema.toLowerCase(Locale.ROOT);
@@ -523,10 +558,16 @@ public class SheetingView extends StandardView {
                 || s.equals("performance_schema") || s.equals("sys") || s.equals("system")
                 || (s.startsWith("sys") && s.length() > 3);
     }
+
     private static String nvl(Object o) { return o == null ? "" : o.toString(); }
     private static String nvl(Object o, String def) { return o == null ? def : o.toString(); }
     private static String objToStr(Object o) { return o == null ? null : o.toString(); }
-    private static String trimOrNull(String s) { if (s == null) return null; String t = s.trim(); return t.isEmpty() ? null : t; }
+
+    private static String trimOrNull(String s) {
+        if (s == null) return null;
+        String t = s.trim();
+        return t.isEmpty() ? null : t;
+    }
 
     private void info(String msg) { notifications.create(msg).withType(Notifications.Type.SUCCESS).show(); }
     private void warn(String msg) { notifications.create(msg).withType(Notifications.Type.WARNING).show(); }
@@ -537,10 +578,10 @@ public class SheetingView extends StandardView {
         String name   = nvl(e.getValue("name"), "");
         return schema.isEmpty() ? name : schema + "." + name;
     }
+
     private String quickInfo(KeyValueEntity e) {
         String type = nvl(e.getValue("type"), "");
         String remarks = nvl(e.getValue("remarks"), "");
         return (type.isEmpty() ? "" : "[" + type + "] ") + remarks;
     }
-
 }
